2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFData.h:
	* Source/CFData.m:
	* Source/CFData.c:
	* Source/GNUmakefile: Replace CFData.m with CFData.c.

2011-09-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFRuntime.c: Increment and decrement reference count ourselves
	instead of relying on Foundation functions.
	* Source/GNUmakefile: Replace CFRuntime.m with CFRuntime.c.
	* Source/atomic_ops.h: Atomic increment and decrement operations.

2011-09-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Set memory to 0 when creating new objects, and do
	not accept anything but an actual CFTypeID in CFCopyTypeIDDescription().
	* Source/CFString.c: Reverted previous changes, bug was actually in
	CFRuntime.

2011-09-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Create instances ourselves instead relying on
	gnustep-base.
	* Source/GNUmakefile:
	* Source/CFBase.c:
	* Source/CFBase.m: Implement a true CFAllocator type.  It is no longer
	compatible with a NSZone.  This change also eliminates the objc dependency
	so the file is now pure C.
	* Source/CFArray.m:
	* Source/CFNumber.m:
	* Source/CFStream.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFData.m: Do not use CFAllocators as NSZones.
	* Source/NSCFType.h:
	* Source/NSCFType.m: NSCFType no longer conforms to NSCopying.  I'm not
	sure it ever had to.
	* Source/CFString.c: Fix bug in CFStringCreateMutable().

2011-09-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Update to reflect latest changes in gnustep-base.
	* Source/CFError.m:
	* Source/Identifiers.m: Moved definition of identifiers.
	* Headers/CoreFoundation/CFString.h: Do not define CFSTR() to @""
	in ObjC source files.

2011-08-28 Matt Rice <ratmice@gmail.com>

	* Source/objc_interface.h: Remove referene to preface.h
	add runtime.h.
	(CF_IS_OBJC): Add cast to avoid warning.